[gd_scene load_steps=23 format=4 uid="uid://f8evf6ueyum2"]

[ext_resource type="Texture2D" uid="uid://ua4jl7id8in7" path="res://assets/sprites/town1-tileset.png" id="1_5jnld"]
[ext_resource type="Shader" uid="uid://djwlpjfvufpdv" path="res://assets/shaders/star.gdshader" id="1_5xdbm"]
[ext_resource type="Script" uid="uid://7uviafugoxhs" path="res://scenes/framework/title_scene/title_scene.gd" id="1_viswp"]
[ext_resource type="Texture2D" uid="uid://crbuglfhr42r2" path="res://assets/sprites/Moon-1.png" id="2_7iu78"]
[ext_resource type="PackedScene" uid="uid://up1qjcwrcefu" path="res://scenes/entities/systems/game_camera/game_camera.tscn" id="2_hbq5y"]
[ext_resource type="Shader" uid="uid://bjkut4u5tkml8" path="res://assets/shaders/fog.gdshader" id="3_gcwjt"]
[ext_resource type="Texture2D" uid="uid://cqjw6m6mua626" path="res://assets/sprites/Statue.png" id="5_7pyla"]
[ext_resource type="AudioStream" uid="uid://bx1hw08fg02ow" path="res://assets/sounds/Button_4.ogg" id="8_la8mn"]
[ext_resource type="AudioStream" uid="uid://cnje2cyebrnvt" path="res://assets/sounds/Button_Mouseover.ogg" id="9_5bvyh"]

[sub_resource type="Gradient" id="Gradient_5xdbm"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7pyla"]
gradient = SubResource("Gradient_5xdbm")

[sub_resource type="Gradient" id="Gradient_7iu78"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_viswp"]
gradient = SubResource("Gradient_7iu78")
fill_from = Vector2(0.47863248, 0)
fill_to = Vector2(0.51282054, 0.98575497)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7pyla"]
shader = ExtResource("1_5xdbm")
shader_parameter/gradientA = SubResource("GradientTexture2D_7pyla")
shader_parameter/horizontalMovement = -1.69999999552964
shader_parameter/verticalMovement = -0.69999998062844
shader_parameter/frequencyStar = 0.00999999977648
shader_parameter/sizeStar = 200.0
shader_parameter/brightnessStar = 3.0
shader_parameter/shineFrequencyStar = 8.0
shader_parameter/transparencyStar = 0.23999999463552
shader_parameter/starIterations = 3
shader_parameter/gradientB = SubResource("GradientTexture2D_viswp")
shader_parameter/frequencyBgStar = 0.996
shader_parameter/shineFrequencyBgStar = 1.0
shader_parameter/transparencyBgStar = 0.249999994412
shader_parameter/colorBackground = Color(0.05, 0.04, 0.2, 1)
shader_parameter/transparencyBackground = 0.0
shader_parameter/seed = 5.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_7iu78"]
noise_type = 3
frequency = 0.0019

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_viswp"]
noise = SubResource("FastNoiseLite_7iu78")
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5xdbm"]
shader = ExtResource("3_gcwjt")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_viswp")
shader_parameter/density = 0.706000033535
shader_parameter/speed = Vector2(-0.005, -0.001)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hbq5y"]
texture = ExtResource("1_5jnld")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
6:4/0 = 0
6:5/0 = 0
6:6/0 = 0
6:7/0 = 0
9:2/size_in_atlas = Vector2i(1, 2)
9:2/0 = 0
9:0/size_in_atlas = Vector2i(2, 2)
9:0/0 = 0
0:5/size_in_atlas = Vector2i(3, 3)
0:5/0 = 0
3:4/size_in_atlas = Vector2i(3, 4)
3:4/0 = 0
7:4/size_in_atlas = Vector2i(3, 4)
7:4/0 = 0
11:0/size_in_atlas = Vector2i(2, 1)
11:0/0 = 0

[sub_resource type="TileSet" id="TileSet_gcwjt"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_hbq5y")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5xdbm"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7pyla"]
noise = SubResource("FastNoiseLite_5xdbm")
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7iu78"]
shader = ExtResource("3_gcwjt")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_7pyla")
shader_parameter/density = 0.25
shader_parameter/speed = Vector2(0.02, 0.01)

[node name="TitleScene" type="Node2D"]
script = ExtResource("1_viswp")

[node name="sounds" type="Node2D" parent="."]

[node name="ButtonMouseover" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("9_5bvyh")
bus = &"SFX"

[node name="Button4" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("8_la8mn")
bus = &"SFX"

[node name="StarField" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_7pyla")
offset_left = -430.0
offset_top = -301.0
offset_right = 430.0
offset_bottom = -57.0

[node name="moon" type="Sprite2D" parent="."]
position = Vector2(-329, -239)
texture = ExtResource("2_7iu78")

[node name="CloudCover" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5xdbm")
offset_left = -417.0
offset_top = -301.0
offset_right = 417.0
offset_bottom = -61.0

[node name="BG_TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9////AAAAAAAAAAD+////AAAAAAAAAAD/////AAAAAAAAAAAAAP//AAABAAEAAAABAP//AAABAAEAAAACAP//AAABAAEAAAADAP//AAABAAEAAAAEAP//AAABAAEAAAAFAP//AAABAAEAAAAGAP//AAABAAEAAAAHAP//AAABAAEAAAAIAP//AAABAAEAAAAJAP//AAABAAEAAAAKAP//AAABAAEAAAALAP//AAABAAEAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAHAAEAAAABAAEAAAAGAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD7/wEAAAAAAAAAAAD6/wEAAAABAAEAAAD6/wAAAAABAAEAAAD6////AAABAAEAAAD7/wAAAAABAAEAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAEAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAABAAEAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAD7////AAABAAEAAAD8////AAABAAEAAAD4//7/AAABAAEAAAD4////AAABAAEAAAD4/wAAAAAAAAAAAAD4/wEAAAAAAAAAAAD4/wIAAAABAAEAAAD5//7/AAABAAEAAAD5////AAABAAEAAAD5/wAAAAABAAEAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD6//7/AAABAAEAAAD6/wIAAAAAAAAAAAD7//7/AAABAAEAAAD7/wIAAAABAAEAAAD8//7/AAABAAEAAAD8/wIAAAAAAAAAAAD9//7/AAAAAAAAAAD9/wIAAAAAAAAAAAD+//7/AAACAAAAAAD+/wIAAAAAAAAAAAD///7/AAAAAAAAAAD//wIAAAAAAAAAAAAAAP7/AAABAAEAAAAAAAIAAAAAAAAAAAABAP7/AAABAAEAAAABAAIAAAAAAAAAAAACAP7/AAABAAEAAAACAAIAAAAAAAAAAAADAP7/AAABAAEAAAADAAIAAAAAAAAAAAAEAP7/AAABAAEAAAAEAAIAAAAAAAAAAAAFAP7/AAABAAEAAAAFAAIAAAAAAAAAAAAGAP7/AAABAAEAAAAGAAIAAAAAAAAAAAAHAP7/AAABAAEAAAAHAAIAAAAAAAAAAAAIAP7/AAABAAEAAAAIAAIAAAABAAEAAAAJAP7/AAABAAEAAAAJAAIAAAABAAEAAAAKAP7/AAABAAEAAAAKAAIAAAABAAEAAAALAP7/AAABAAEAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAAMAP7/AAABAAEAAAAMAP//AAABAAEAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAADz//7/AAABAAEAAADz////AAABAAEAAADz/wAAAAAAAAAAAADz/wEAAAAAAAAAAADz/wIAAAABAAEAAAD0//7/AAABAAEAAAD0////AAABAAEAAAD0/wAAAAABAAEAAAD0/wEAAAABAAEAAAD0/wIAAAAAAAAAAAD1//7/AAABAAEAAAD1////AAABAAEAAAD1/wAAAAAAAAAAAAD1/wEAAAAAAAAAAAD1/wIAAAABAAEAAAD2//7/AAABAAEAAAD2////AAABAAEAAAD2/wAAAAABAAEAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD3//7/AAABAAEAAAD3////AAABAAEAAAD3/wAAAAAAAAAAAAD3/wEAAAABAAEAAAD3/wIAAAAAAAAAAADz/wMAAAAAAAAAAADz/wQAAAAAAAAAAADz/wUAAAAAAAAAAADz/wYAAAAAAAAAAADz/wcAAAAAAAAAAADz/wgAAAAAAAAAAADz/wkAAAAAAAAAAAD0/wMAAAAAAAAAAAD0/wQAAAAAAAAAAAD0/wUAAAAAAAAAAAD0/wYAAAAAAAAAAAD0/wcAAAAAAAAAAAD0/wgAAAAAAAAAAAD0/wkAAAAAAAAAAAD1/wMAAAAAAAAAAAD1/wQAAAAAAAAAAAD1/wUAAAAAAAAAAAD1/wYAAAAAAAAAAAD1/wcAAAAAAAAAAAD1/wgAAAAAAAAAAAD1/wkAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wUAAAAAAAAAAAD2/wYAAAAAAAAAAAD2/wcAAAAAAAAAAAD2/wgAAAAAAAAAAAD2/wkAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAAAAAAAAAD3/wcAAAAAAAAAAAD3/wgAAAAAAAAAAAD3/wkAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD4/wYAAAABAAEAAAD4/wcAAAAAAAAAAAD4/wgAAAAAAAAAAAD4/wkAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAABAAEAAAD5/wcAAAAAAAAAAAD5/wgAAAAAAAAAAAD5/wkAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAABAAEAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wYAAAABAAEAAAD7/wcAAAAAAAAAAAD7/wgAAAAAAAAAAAD7/wkAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAAAAAAAAAD8/wgAAAABAAEAAAD8/wkAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAABAAEAAAD9/wkAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAABAAEAAAAAAAkAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAABAAEAAAABAAkAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAABAAEAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAABAAEAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAABAAEAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAABAAEAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAMAAAACAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAACAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAD7/wUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_gcwjt")

[node name="Mid_TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD8//7/AAAJAAAAAAD8//3/AAAJAAAAAAD7//7/AAAJAAIAAAD6//7/AAAJAAIAAAD5//3/AAAJAAIAAAD4//7/AAAJAAAAAAD7//3/AAAJAAIAAAD5//7/AAAJAAIAAAD2//3/AAAJAAAAAAD1//7/AAAJAAAAAAD2//7/AAAJAAAAAAD3//3/AAAJAAAAAAD3//7/AAAJAAAAAAAAAP7/AAAJAAAAAAAAAP3/AAAJAAIAAAABAP3/AAAJAAIAAAABAP7/AAAJAAIAAAACAP3/AAAJAAIAAAACAP7/AAAJAAIAAAADAP3/AAAJAAIAAAADAP7/AAAJAAIAAAAEAP3/AAAJAAIAAAAEAP7/AAAJAAIAAAAFAP3/AAAJAAAAAAAFAP7/AAAJAAAAAAAGAP3/AAAJAAAAAAAGAP7/AAAJAAIAAAAHAP3/AAAJAAIAAAAHAP7/AAAJAAIAAAAIAP3/AAAJAAIAAAAIAP7/AAAJAAIAAAAJAP3/AAAJAAAAAAAJAP7/AAAJAAAAAAAKAP3/AAAJAAAAAAAKAP7/AAAJAAAAAAALAP3/AAAJAAIAAAALAP7/AAAJAAAAAAAMAP3/AAAJAAAAAAAMAP7/AAAJAAIAAAANAP3/AAAJAAAAAAANAP7/AAAJAAAAAADz//3/AAAJAAIAAADz//7/AAAJAAAAAAD0//3/AAAJAAAAAAD0//7/AAAJAAAAAAD1//3/AAAJAAIAAAD4//3/AAAJAAIAAAD6//3/AAAJAAIAAAD9//3/AAAJAAIAAAD9//7/AAAJAAAAAAD3////AAAJAAIAAAD3/wAAAAAJAAAAAAD4////AAAJAAAAAAD4/wAAAAAJAAAAAAD5////AAAJAAIAAAD5/wAAAAAJAAAAAAAEAP//AAAJAAAAAAAEAAAAAAAJAAIAAAAFAP//AAAJAAAAAAAFAAAAAAAJAAIAAAAGAP//AAAJAAIAAAAGAAAAAAAJAAIAAAAHAP//AAAJAAAAAAAHAAAAAAAJAAAAAAAIAP//AAAJAAAAAAAIAAAAAAAJAAAAAAAKAP//AAAJAAIAAAAKAAAAAAAJAAIAAAALAP//AAAJAAIAAAALAAAAAAAJAAAAAAAMAP//AAAJAAAAAAAMAAAAAAAJAAAAAAAMAAEAAAAJAAIAAAD6////AAAJAAIAAAD7////AAAJAAIAAAD1////AAAJAAIAAAD2////AAAJAAIAAAD0////AAAJAAIAAAD6/wAAAAAJAAIAAAAJAP//AAAJAAIAAAAJAAAAAAAJAAIAAAAKAAEAAAAJAAIAAAAIAAEAAAAJAAIAAAAJAAEAAAAJAAIAAAADAAAAAAAJAAIAAAACAAAAAAAJAAIAAAD8////AAAJAAIAAAD7/wEAAAAJAAIAAAD4/wEAAAAJAAIAAAD1/wEAAAAJAAIAAAD0/wAAAAAJAAIAAADz/wAAAAAJAAIAAADz/wEAAAAJAAIAAAD1/wAAAAAJAAAAAAD9/wgAAAAIAAAAAAD+/wgAAAAIAAAAAAD//wgAAAAIAAAAAAABAAkAAAAGAAAAAAD5/wcAAAABAAEAAAD6/wcAAAABAAEAAAAFAAcAAAABAAEAAAAGAAcAAAABAAEAAAA=")
tile_set = SubResource("TileSet_gcwjt")

[node name="FogCover" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_7iu78")
offset_left = -430.0
offset_top = -75.0
offset_right = 439.0
offset_bottom = 329.0

[node name="Camera2D" parent="." instance=ExtResource("2_hbq5y")]

[node name="props" type="Node2D" parent="."]

[node name="statue_left" type="Sprite2D" parent="props"]
position = Vector2(-200, 155)
texture = ExtResource("5_7pyla")

[node name="statue_right" type="Sprite2D" parent="props"]
position = Vector2(200, 155)
texture = ExtResource("5_7pyla")
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="props"]
offset_left = -80.0
offset_top = 21.0
offset_right = 77.0
offset_bottom = 215.0

[node name="btnNew" type="Button" parent="props/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="btnContinue" type="Button" parent="props/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="btnSettings" type="Button" parent="props/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="btnCredits" type="Button" parent="props/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="btnQuit" type="Button" parent="props/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="focus_entered" from="props/VBoxContainer/btnNew" to="." method="_on_btn_new_focus_entered"]
[connection signal="pressed" from="props/VBoxContainer/btnNew" to="." method="_on_btn_new_pressed"]
[connection signal="focus_entered" from="props/VBoxContainer/btnContinue" to="." method="_on_btn_continue_focus_entered"]
[connection signal="focus_entered" from="props/VBoxContainer/btnSettings" to="." method="_on_btn_settings_focus_entered"]
[connection signal="focus_entered" from="props/VBoxContainer/btnCredits" to="." method="_on_btn_credits_focus_entered"]
[connection signal="focus_entered" from="props/VBoxContainer/btnQuit" to="." method="_on_btn_quit_focus_entered"]
[connection signal="pressed" from="props/VBoxContainer/btnQuit" to="." method="_on_btn_quit_pressed"]
